# openclaw-android-wechat

./: .gitignore  README.md  build.gradle  gradle.properties  gradlew.bat  local.properties.example  settings.gradle
.github/workflows/: debug_build.yml  dependency-submission.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_openclaw.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/raw/: openclaw_wechatui_channel.tar  startup_openclaw.sh
app/src/main/res/values/: strings.xml
docs/en/: index.md
huixiangdou/: build.gradle  consumer-rules.pro
huixiangdou/src/main/: AndroidManifest.xml
kimi-server/: build.gradle
kimi-server/src/main/: AndroidManifest.xml
kimi-server/src/main/res-kimi/drawable/: kimi_ic_status_off.xml
kimi-server/src/main/res-kimi/values/: strings.xml
kimi-server/src/main/res-kimi/xml/: kimi_accessibility_service_config.xml
kimi-server/src/main/res/values/: colors.xml  themes.xml
openclaw-wechatui-channel/: README.md  index.ts  openclaw.plugin.json  package.json
openclaw-wechatui-channel/src/: accounts.ts  channel.ts  client-bridge.ts  config-schema.ts  device-hub.ts  huixiangdou-bridge.ts  inbound.ts  monitor.ts  openclawwx-bridge.ts  runtime.ts  send.ts  ws-client.ts
openclaw-wechatui-channel/tools/: dev-server.mjs  ws-smoke.mjs
terminal-emulator/: build.gradle
wx-server/: build.gradle
wx-server/src/main/: AndroidManifest.xml
wx-server/src/main/jni/: CMakeLists.txt  common.cpp  kmp_compat.cpp  paddleocr_ncnn.cpp
(+95 files in other folders)
